<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tileBlurs.StartActivity">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/splashImage"
        android:text="@string/welcome_to_photo_blur"
        android:textColor="@color/splash_title_color"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/splash_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_title"
        android:text="@string/easy_to_choose"
        android:textColor="@color/splash_msg_color"
        android:gravity="center"
        android:textSize="22sp"
        />

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_msg"
        app:layout_constraintBottom_toTopOf="@id/lets_start"
        android:src="@drawable/ic_splash_img"
        android:contentDescription="@string/splash_image"
        />
    <TextView
        android:id="@+id/splash_second_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashImage"
        android:text="@string/sometimes_blurred_pictures_add_more_beauty"
        android:textColor="@color/splash_second_msg"
        android:textStyle="bold"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:maxLines="2"
        />
    <ImageView
        android:id="@+id/lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_second_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/splash_button"
        android:contentDescription="@string/let_s_start"
        />

</androidx.constraintlayout.widget.ConstraintLayout>